--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
@@ -11,6 +12,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "history": "^4.10.1",
+    "lodash": "^4.17.21",
     "lodash-humps": "^3.1.6",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
