--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@types/react-dom": "^17.0.2",
     "classnames": "^2.2.6",
     "history": "^4.10.1",
+    "humps": "^2.0.1",
     "lodash": "^4.17.21",
-    "lodash-humps": "^3.1.6",
     "moment": "^2.29.1",
+    "qs": "^6.5.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.2",
