Add pagination and searchListener

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -5,7 +5,8 @@
       "types": ["./src/types"],
       "state/*": ["./src/state/*"],
       "utilities/*": ["./src/utilities/*"],
-      "components/*": ["./src/components/*"]
+      "components/*": ["./src/components/*"],
+      "contexts/*": ["./src/contexts/*"]
     }
   }
 }
