--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "qs": "^6.5.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "16.14",
+    "react-dom": "16.14",
     "react-redux": "^7.2.2",
     "react-redux-loading-bar": "^5.0.0",
     "react-router-dom": "^5.2.0",
