--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "actioncable": "^5.2.6",
     "classnames": "^2.2.6",
     "history": "^4.10.1",
     "humps": "^2.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "notistack": "^1.0.9",
     "qs": "^6.5.2",
     "react": "16.14",
     "react-dom": "16.14",
