--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "notistack": "^1.0.9",
+    "pluralize": "^8.0.0",
     "qs": "^6.5.2",
     "react": "16.14",
+    "react-countdown": "^2.3.2",
     "react-dom": "16.14",
     "react-redux": "^7.2.2",
     "react-redux-loading-bar": "^5.0.0",
