--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.2",
     "actioncable": "^5.2.6",
     "classnames": "^2.2.6",
+    "enzyme": "^3.11.0",
     "history": "^4.10.1",
     "humps": "^2.0.1",
     "lodash": "^4.17.21",
@@ -60,6 +61,7 @@
     ]
   },
   "devDependencies": {
+    "enzyme-adapter-react-16": "^1.15.6",
     "react-app-rewire-alias": "^1.0.1",
     "react-app-rewired": "^2.1.8",
     "tsconfig-paths": "^3.9.0"
