Add tests to the rounds page

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "react-app-rewire-alias": "^1.0.1",
     "react-app-rewired": "^2.1.8",
+    "timezone-mock": "^1.2.1",
     "tsconfig-paths": "^3.9.0"
   }
 }
