--- a/package.json
+++ b/package.json
@@ -21,38 +21,38 @@
     ]
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.1",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^12.20.4",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
-    "actioncable": "^5.2.6",
-    "classnames": "^2.2.6",
-    "enzyme": "^3.11.0",
-    "history": "^4.10.1",
+    "@mui/icons-material": "^5.15.5",
+    "@mui/material": "^5.15.5",
+    "@mui/system": "^5.15.5",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.17",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@rails/actioncable": "^7.1.3",
+    "classnames": "^2.5.1",
+    "history": "^5.3.0",
     "humps": "^2.0.1",
     "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "notistack": "^1.0.9",
+    "moment": "^2.30.1",
+    "notistack": "^3.0.1",
     "pluralize": "^8.0.0",
-    "qs": "^6.5.2",
-    "react": "16.14",
-    "react-countdown": "^2.3.2",
-    "react-dom": "16.14",
-    "react-redux": "^7.2.2",
-    "react-redux-loading-bar": "^5.0.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-saga": "^1.1.3",
+    "qs": "^6.11.2",
+    "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
+    "react-redux-loading-bar": "^5.0.8",
+    "react-router-dom": "^6.21.3",
+    "react-scripts": "^5.0.1",
+    "redux": "^5.0.1",
+    "@redux-devtools/extension": "^3.3.0",
+    "redux-saga": "^1.3.0",
     "typescript": "^4.2.3",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "tss-react": "^4.9.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -86,12 +86,11 @@
     ]
   },
   "devDependencies": {
-    "enzyme-adapter-react-16": "^1.15.6",
     "husky": "^7.0.2",
-    "react-app-rewire-alias": "^1.0.1",
-    "react-app-rewired": "^2.1.8",
-    "redux-saga-test-plan": "^4.0.3",
-    "timezone-mock": "^1.2.1",
-    "tsconfig-paths": "^3.9.0"
+    "react-app-rewire-alias": "^1.1.7",
+    "react-app-rewired": "^2.2.1",
+    "redux-saga-test-plan": "^4.0.6",
+    "timezone-mock": "^1.3.6",
+    "tsconfig-paths": "^4.2.0"
   }
 }
