--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     ]
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
     "@mui/system": "^5.15.5",
+    "@rails/actioncable": "^7.1.3",
+    "@redux-devtools/extension": "^3.3.0",
+    "@reduxjs/toolkit": "^2.2.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
@@ -31,7 +35,6 @@
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "@rails/actioncable": "^7.1.3",
     "classnames": "^2.5.1",
     "history": "^5.3.0",
     "humps": "^2.0.1",
@@ -47,12 +50,10 @@
     "react-redux-loading-bar": "^5.0.8",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
-    "redux": "^5.0.1",
-    "@redux-devtools/extension": "^3.3.0",
     "redux-saga": "^1.3.0",
+    "tss-react": "^4.9.3",
     "typescript": "^4.2.3",
-    "web-vitals": "^1.1.0",
-    "tss-react": "^4.9.3"
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
