--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 PORT=8080
-REACT_APP_API_URL=http://localhost:3000/api
-REACT_APP_CABLE_URL=ws://localhost:3000/cable
+VITE_API_URL=http://localhost:3000/api
+VITE_CABLE_URL=ws://localhost:3000/cable
