--- a/package.json
+++ b/package.json
@@ -2,33 +2,6 @@
   "name": "fpl-app-fe",
   "version": "0.1.0",
   "private": true,
-  "jest": {
-    "preset": "ts-jest/presets/js-with-ts",
-    "testEnvironment": "jest-environment-jsdom",
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
-    },
-    "modulePaths": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!<rootDir>/node_modules/",
-      "!<rootDir>/path/to/dir/"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 97.56,
-        "functions": 98.83,
-        "lines": 98.56,
-        "statements": 98.49
-      }
-    },
-    "coverageReporters": [
-      "text"
-    ]
-  },
   "dependencies": {
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.5",
@@ -36,9 +9,6 @@
     "@mui/system": "^5.15.5",
     "@rails/actioncable": "^7.1.3",
     "@reduxjs/toolkit": "^2.2.0",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
@@ -98,6 +68,9 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "css-mediaquery": "^0.1.2",
     "husky": "^7.0.2",
@@ -109,6 +82,8 @@
     "redux-saga-test-plan": "^4.0.6",
     "timezone-mock": "^1.3.6",
     "ts-jest": "^29.1.2",
+    "ts-jest-mock-import-meta": "^1.2.0",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0"
   }
 }
