--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "redux-saga": "^1.3.0",
+    "serve": "^14.2.1",
     "tss-react": "^4.9.3",
     "typescript": "^4.2.3",
     "vite": "^5.2.8",
